Bug 360672 - "Plasma Desktop Widgets" category shown twice
Summary: "Plasma Desktop Widgets" category shown twice
Status: CLOSED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-17 19:17 UTC by Thomas Pfeiffer
Modified: 2016-03-18 13:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Pfeiffer 2016-03-17 19:17:14 UTC
The category "Plasma Desktop Widgets" shows up twice in the category list, though the second one is empty.

Reproducible: Always
Comment 1 Aleix Pol 2016-03-18 13:02:35 UTC
Git commit f537e8993ce1ae28a015e9d285683f047901a3b7 by Aleix Pol.
Committed on 18/03/2016 at 12:55.
Pushed by apol into branch 'master'.

Make sure Plasma Desktop Widgets categories are being merged properly

M  +3    -1    libdiscover/Category/Category.cpp
M  +1    -0    libdiscover/backends/PackageKitBackend/packagekit-backend-categories.xml

http://commits.kde.org/discover/f537e8993ce1ae28a015e9d285683f047901a3b7
Comment 2 Thomas Pfeiffer 2016-03-18 13:08:41 UTC
I just tested and can confirm the fix.