Make sure Plasma Desktop Widgets categories are being merged properly

BUG: 360672